--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,11 @@
 			<artifactId>jxls-core</artifactId>
 			<version>1.0.3</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.1.41</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
