--- a/ps/src/main/resources/application.properties
+++ b/ps/src/main/resources/application.properties
@@ -3,4 +3,5 @@ uploadPath=upload
 workerPath=worker
 companyPath=company
 createTabCompany=\u5236\u8868\u5355\u4F4D\uFF1A\u9ED1\u9F99\u6C5F\u7701\u6B8B\u75BE\u4EBA\u8054\u5408\u4F1A
-
+loginFail=\u767B\u5F55\u540D\u6216\u5BC6\u7801\u4E0D\u6B63\u786E
+address=vtd/
