--- a/ps/src/main/resources/application.properties
+++ b/ps/src/main/resources/application.properties
@@ -6,6 +6,9 @@ createTabCompany=\u5236\u8868\u5355\u4F4D\uFF1A\u9ED1\u9F99\u6C5F\u7701\u6B8B\u7
 
 loginFail=\u767B\u5F55\u540D\u6216\u5BC6\u7801\u4E0D\u6B63\u786E
 address=vtd/
-uploadReplay=\u606d\u559c\u606d\u559c,\u4e0a\u4f20\u6210\u529f!!!
+uploadReplay=\u606D\u559C\u606D\u559C,\u4E0A\u4F20\u6210\u529F\!\!\!
 workerMark=0
-downReplay=\u606d\u559c\u606d\u559c,\u4e0b\u8f7d\u6210\u529f!!!
+downReplay=\u606D\u559C\u606D\u559C,\u4E0B\u8F7D\u6210\u529F\!\!\!
+userDesEnglish=login
+addUserReplay=\u65B0\u589E\u7528\u6237\u5931\u8D25\!\!\!
+addUserAddress=manager/manager
