--- a/ps/src/main/resources/application.properties
+++ b/ps/src/main/resources/application.properties
@@ -11,4 +11,4 @@ workerMark=0
 downReplay=\u606D\u559C\u606D\u559C,\u4E0B\u8F7D\u6210\u529F\!\!\!
 userDesEnglish=login
 addUserReplay=\u65B0\u589E\u7528\u6237\u5931\u8D25\!\!\!
-addUserAddress=manager/manager
+addUserAddress=redirect: manager/manager
