--- a/ps/src/main/resources/application.properties
+++ b/ps/src/main/resources/application.properties
@@ -10,5 +10,5 @@ uploadReplay=\u606D\u559C\u606D\u559C,\u4E0A\u4F20\u6210\u529F\!\!\!
 workerMark=0
 downReplay=\u606D\u559C\u606D\u559C,\u4E0B\u8F7D\u6210\u529F\!\!\!
 userDesEnglish=login
-addUserReplay=\u65B0\u589E\u7528\u6237\u5931\u8D25\!\!\!
-addUserAddress=redirect: manager/manager
+addUserReplay=1
+addUserAddress=redirect\: manager/manager
