--- a/ps/src/main/resources/application.properties
+++ b/ps/src/main/resources/application.properties
@@ -4,11 +4,13 @@ workerPath=worker
 companyPath=company
 createTabCompany=\u5236\u8868\u5355\u4F4D\uFF1A\u9ED1\u9F99\u6C5F\u7701\u6B8B\u75BE\u4EBA\u8054\u5408\u4F1A
 
-loginFail=\u767B\u5F55\u540D\u6216\u5BC6\u7801\u4E0D\u6B63\u786E
-address=vtd/
+
+
 uploadReplay=\u606D\u559C\u606D\u559C,\u4E0A\u4F20\u6210\u529F\!\!\!
 workerMark=0
 downReplay=\u606D\u559C\u606D\u559C,\u4E0B\u8F7D\u6210\u529F\!\!\!
-userDesEnglish=login
-addUserReplay=1
-addUserAddress=redirect\:manager/manager
+MSG_USER_NOT_EXIST=\u7528\u6237\u540D\u4E0D\u5B58\u5728\!
+MSG_USER_NOT_EMPTY=\u7528\u6237\u4E0D\u80FD\u4E3A\u7A7A\!
+MSG_PASSWORD_NOT_EMPTY=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A\!
+MSG_PASSWORD_NOT_ERROR=\u5BC6\u7801\u9519\u8BEF\!
+MSG_USER_EXIST=\u7528\u6237\u5DF2\u5B58\u5728\!
