--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,13 @@
 			<version>4.3.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.3</version>
+			<classifier>jdk15</classifier>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 
 	<repositories>
