--- a/ps/src/main/resources/message.properties
+++ b/ps/src/main/resources/message.properties
@@ -14,3 +14,9 @@ MSG_USER_NOT_EMPTY=\u7528\u6237\u4E0D\u80FD\u4E3A\u7A7A\!
 MSG_PASSWORD_NOT_EMPTY=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A\!
 MSG_PASSWORD_NOT_ERROR=\u5BC6\u7801\u9519\u8BEF\!
 MSG_USER_EXIST=\u7528\u6237\u5DF2\u5B58\u5728\!
+MSG_WORKERDISABILITYCARD_EXIST=\u6B8B\u75BE\u4EBA\u8BC1\u53F7\u5DF2\u5B58\u5728\!
+MSG_WORKERPHONE_EXIST=\u624B\u673A\u53F7\u5DF2\u5B58\u5728\!
+MSG_PACK_EXIST=\u5305\u5DF2\u5B58\u5728
+MSG_PACK_NOT_EXIST=\u5305\u4E0D\u5B58\u5728
+MSG_PACK_ERROR=\u5305\u4E0D\u7B26\u89C4\u8303\u6216\u5DF2\u635F\u574F
+MSG_USER_STOP=\u7528\u6237\u5DF2\u505C\u7528
