updatePassword 和 常量设置

--- a/ps/src/main/resources/message.properties
+++ b/ps/src/main/resources/message.properties
@@ -18,5 +18,7 @@ MSG_WORKERDISABILITYCARD_EXIST=\u6B8B\u75BE\u4EBA\u8BC1\u53F7\u5DF2\u5B58\u5728\
 MSG_WORKERPHONE_EXIST=\u624B\u673A\u53F7\u5DF2\u5B58\u5728\!
 MSG_PACK_EXIST=\u5305\u5DF2\u5B58\u5728
 MSG_PACK_NOT_EXIST=\u5305\u4E0D\u5B58\u5728
+MSG_UNZIP_FINISH=\u89E3\u538B\u5B8C\u6210
 MSG_PACK_ERROR=\u5305\u4E0D\u7B26\u89C4\u8303\u6216\u5DF2\u635F\u574F
 MSG_USER_STOP=\u7528\u6237\u5DF2\u505C\u7528
+MSG_FOLD_NOT_EXIST=\u6587\u4EF6\u5939\u4E0D\u5B58\u5728
