--- a/ps/src/main/resources/message.properties
+++ b/ps/src/main/resources/message.properties
@@ -7,8 +7,8 @@ createTabCompany=\u5236\u8868\u5355\u4F4D\uFF1A\u9ED1\u9F99\u6C5F\u7701\u6B8B\u7
 
 
 uploadReplay=\u606D\u559C\u606D\u559C,\u4E0A\u4F20\u6210\u529F\!\!\!
-workerMark=0
 downReplay=\u606D\u559C\u606D\u559C,\u4E0B\u8F7D\u6210\u529F\!\!\!
+MSG_TASK_NOT_ENOUGH=\u4EFB\u52A1\u6570\u4E0D\u8DB3,\u8BF7\u6309\u5237\u65B0
 MSG_USER_NOT_EXIST=\u7528\u6237\u540D\u4E0D\u5B58\u5728\!
 MSG_USER_NOT_EMPTY=\u7528\u6237\u4E0D\u80FD\u4E3A\u7A7A\!
 MSG_PASSWORD_NOT_EMPTY=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A\!
