--- a/ps/src/main/resources/message.properties
+++ b/ps/src/main/resources/message.properties
@@ -23,6 +23,7 @@ MSG_PACK_EXIST=\u5305\u5DF2\u5B58\u5728
 MSG_PACK_NOT_EXIST=\u5305\u4E0D\u5B58\u5728
 MSG_UNZIP_FINISH=\u89E3\u538B\u5B8C\u6210
 MSG_UPDATE_SUCCESS=\u4FEE\u6539\u6210\u529F
+MSG_UPDATE_ERROR=\u4FEE\u6539\u5931\u8D25
 MSG_OLD_PASSWORD_ERROR=\u539F\u5BC6\u7801\u9519\u8BEF
 MSG_PACK_ERROR=\u5305\u4E0D\u7B26\u89C4\u8303\u6216\u5DF2\u635F\u574F
 MSG_USER_STOP=\u7528\u6237\u5DF2\u505C\u7528
