--- a/ps/src/main/resources/message.properties
+++ b/ps/src/main/resources/message.properties
@@ -8,6 +8,7 @@ createTabCompany=\u5236\u8868\u5355\u4F4D\uFF1A\u9ED1\u9F99\u6C5F\u7701\u6B8B\u7
 
 uploadReplay=\u606D\u559C\u606D\u559C,\u4E0A\u4F20\u6210\u529F\!\!\!
 downReplay=\u606D\u559C\u606D\u559C,\u4E0B\u8F7D\u6210\u529F\!\!\!
+FILE_MATCH_CONDITION=<Chinese-talk>
 MSG_TASK_NOT_ENOUGH=\u4EFB\u52A1\u6570\u4E0D\u8DB3,\u8BF7\u6309\u5237\u65B0
 MSG_USER_NOT_EXIST=\u7528\u6237\u540D\u4E0D\u5B58\u5728\!
 MSG_USER_NOT_EMPTY=\u7528\u6237\u4E0D\u80FD\u4E3A\u7A7A\!
@@ -21,7 +22,8 @@ MSG_WORKERDISABILITYCARD_20=\u6B8B\u75BE\u4EBA\u8BC1\u53F7\u4F4D\u6570\u4E0D\u59
 MSG_WORKERPHONE_EXIST=\u624B\u673A\u53F7\u5DF2\u5B58\u5728\!
 MSG_PACK_EXIST=\u5305\u5DF2\u5B58\u5728
 MSG_PACK_NOT_EXIST=\u5305\u4E0D\u5B58\u5728
-MSG_UNZIP_FINISH=\u89E3\u538B\u5B8C\u6210
+MSG_FINISH=\u5DF2\u5B8C\u6210
+MSG_TIME_OUT=\u5DF2\u8D85\u65F6
 MSG_UPDATE_SUCCESS=\u4FEE\u6539\u6210\u529F
 MSG_UPDATE_ERROR=\u4FEE\u6539\u5931\u8D25
 MSG_OLD_PASSWORD_ERROR=\u539F\u5BC6\u7801\u9519\u8BEF
@@ -30,3 +32,7 @@ MSG_USER_STOP=\u7528\u6237\u5DF2\u505C\u7528
 MSG_FOLD_NOT_EXIST=\u6587\u4EF6\u5939\u4E0D\u5B58\u5728
 MSG_DOING=\u8FDB\u884C\u4E2D
 MSG_UNDO=\u7A7A\u95F2\u4E2D
+MSG_UNAUDIT=\u672A\u5BA1\u6838
+MSG_AUDIT=\u5DF2\u5BA1\u6838
+MSG_UNQUALIFY=\u4E0D\u5408\u683C
+MSG_QUALIFY=\u5408\u683C
