--- a/ps/src/main/resources/message.properties
+++ b/ps/src/main/resources/message.properties
@@ -36,3 +36,4 @@ MSG_UNAUDIT=\u672A\u5BA1\u6838
 MSG_AUDIT=\u5DF2\u5BA1\u6838
 MSG_UNQUALIFY=\u4E0D\u5408\u683C
 MSG_QUALIFY=\u5408\u683C
+MSG_NOT_UPDATE=\u6570\u636E\u6CA1\u6709\u66F4\u65B0\!
