--- a/ps/src/main/resources/message.properties
+++ b/ps/src/main/resources/message.properties
@@ -30,11 +30,12 @@ MSG_ADD_SUCCESS=\u65B0\u589E\u6210\u529F\!
 MSG_OLD_PASSWORD_ERROR=\u539F\u5BC6\u7801\u9519\u8BEF
 MSG_PACK_ERROR=\u5305\u4E0D\u7B26\u89C4\u8303\u6216\u5DF2\u635F\u574F
 MSG_USER_STOP=\u7528\u6237\u5DF2\u505C\u7528
-MSG_FOLD_NOT_EXIST=\u6587\u4EF6\u5939\u4E0D\u5B58\u5728
+MSG_FOLD_NOT_EXIST=\u6587\u4EF6\u4E0D\u5B58\u5728
 MSG_DOING=\u8FDB\u884C\u4E2D
 MSG_UNDO=\u7A7A\u95F2\u4E2D
 MSG_UNAUDIT=\u672A\u5BA1\u6838
 MSG_AUDIT=\u5DF2\u5BA1\u6838
 MSG_UNQUALIFY=\u4E0D\u5408\u683C
 MSG_QUALIFY=\u5408\u683C
+MSG_GIVEUP=\u653E\u5F03
 MSG_NOT_UPDATE=\u6570\u636E\u6CA1\u6709\u66F4\u65B0\!
