--- a/ps/src/main/resources/message.properties
+++ b/ps/src/main/resources/message.properties
@@ -23,6 +23,8 @@ MSG_WORKERPHONE_EXIST=\u624B\u673A\u53F7\u5DF2\u5B58\u5728\!
 MSG_PACK_EXIST=\u5305\u5DF2\u5B58\u5728
 MSG_PACK_NOT_EXIST=\u5305\u4E0D\u5B58\u5728
 MSG_FINISH=\u5DF2\u5B8C\u6210
+MSG_UPLOADED=\u5DF2\u4E0A\u4F20
+MSG_UNUPLOAD=\u672A\u4E0A\u4F20
 MSG_TIME_OUT=\u5DF2\u8D85\u65F6
 MSG_UPDATE_SUCCESS=\u4FEE\u6539\u6210\u529F
 MSG_UPDATE_ERROR=\u4FEE\u6539\u5931\u8D25
