--- a/ps/src/main/resources/message.properties
+++ b/ps/src/main/resources/message.properties
@@ -29,6 +29,7 @@ MSG_TIME_OUT=\u5DF2\u8D85\u65F6
 MSG_UPDATE_SUCCESS=\u4FEE\u6539\u6210\u529F
 MSG_UPDATE_ERROR=\u4FEE\u6539\u5931\u8D25
 MSG_ADD_SUCCESS=\u65B0\u589E\u6210\u529F\!
+MSG_DELETE_SUCCESS=\u5220\u9664\u6210\u529F
 MSG_OLD_PASSWORD_ERROR=\u539F\u5BC6\u7801\u9519\u8BEF
 MSG_PACK_ERROR=\u5305\u4E0D\u7B26\u89C4\u8303\u6216\u5DF2\u635F\u574F
 MSG_USER_STOP=\u7528\u6237\u5DF2\u505C\u7528
