--- a/ps/src/main/resources/jdbc.properties
+++ b/ps/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
 # -- please put this file beneath directory: ${CATALINA_HOME}/app/config/ps/
 #
-#### JDBC properties ######
+#### JDBC properties ######192.168.170.115
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.170.115:3306/voice_task_dispatcher?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://192.168.170.241:3306/voice_task_dispatcher?useUnicode=true&amp;characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=esd123
 
