--- a/ps/src/main/webapp/WEB-INF/web.xml
+++ b/ps/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,11 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<listener> 
+	    <listener-class> 
+	        com.esd.ps.listener.SysContextListener 
+	    </listener-class> 
+	</listener>
 	<servlet>
 		<servlet-name>ps</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
